--- a/rss.xml/index.html
+++ b/rss.xml/index.html
@@ -1,1 +1,10 @@
-<!doctype html><html lang=en><head><title>https://blog.zeyrie.dev/rss/</title><link rel=canonical href=https://blog.zeyrie.dev/rss/><meta name=robots content="noindex"><meta charset=utf-8><meta http-equiv=refresh content="0; url=https://blog.zeyrie.dev/rss/"></head></html>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <title>http://localhost:1313/rss/</title>
+    <link rel="canonical" href="http://localhost:1313/rss/">
+    <meta name="robots" content="noindex">
+    <meta charset="utf-8">
+    <meta http-equiv="refresh" content="0; url=http://localhost:1313/rss/">
+  </head>
+</html>
