--- a/feed.xml/index.html
+++ b/feed.xml/index.html
@@ -1,10 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <title>http://localhost:1313/feed/</title>
-    <link rel="canonical" href="http://localhost:1313/feed/">
-    <meta name="robots" content="noindex">
-    <meta charset="utf-8">
-    <meta http-equiv="refresh" content="0; url=http://localhost:1313/feed/">
-  </head>
-</html>
+<!doctype html><html lang=en><head><title>https://blog.zeyrie.dev/feed/</title><link rel=canonical href=https://blog.zeyrie.dev/feed/><meta name=robots content="noindex"><meta charset=utf-8><meta http-equiv=refresh content="0; url=https://blog.zeyrie.dev/feed/"></head></html>
