--- a/rss/index.html
+++ b/rss/index.html
@@ -1,13 +1,1 @@
-<!DOCTYPE html>
-<html>
-<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
-    <meta charset="utf-8">
-    <title>Redirecting...</title>
-    <link rel="canonical" href="http://localhost:1313//index.xml">
-    <meta http-equiv="refresh" content="0; url=http://localhost:1313//index.xml">
-    <meta name="robots" content="noindex">
-</head>
-<body>
-    <a href="http://localhost:1313//index.xml">Click here if you are not redirected</a>
-</body>
-</html>
+<!doctype html><html><head><meta charset=utf-8><title>Redirecting...</title><link rel=canonical href=https://blog.zeyrie.dev//index.xml><meta http-equiv=refresh content="0; url=https://blog.zeyrie.dev//index.xml"><meta name=robots content="noindex"></head><body><a href=https://blog.zeyrie.dev//index.xml>Click here if you are not redirected</a></body></html>
