--- a/feed/index.html
+++ b/feed/index.html
@@ -1,13 +1,1 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8">
-    <title>Redirecting...</title>
-    <link rel="canonical" href="https://blog.zeyrie.dev//index.xml">
-    <meta http-equiv="refresh" content="0; url=https://blog.zeyrie.dev//index.xml">
-    <meta name="robots" content="noindex">
-</head>
-<body>
-    <a href="https://blog.zeyrie.dev//index.xml">Click here if you are not redirected</a>
-</body>
-</html>
+<!doctype html><html><head><meta charset=utf-8><title>Redirecting...</title><link rel=canonical href=https://blog.zeyrie.dev//index.xml><meta http-equiv=refresh content="0; url=https://blog.zeyrie.dev//index.xml"><meta name=robots content="noindex"></head><body><a href=https://blog.zeyrie.dev//index.xml>Click here if you are not redirected</a></body></html>
